dovecot/dovecot-pigeonhole/tests/execute/errors/redirect-limit.sieve
redirect "address1@example.com";
redirect "address2@example.com";
redirect "address3@example.com";
redirect "address4@example.com";
redirect "address5@example.com";
